@@ -52,8 +52,8 @@ if(!sqGetGlobalVar('squirrelmail_language', $squirrelmail_language) || $squirrel
     $squirrelmail_language = $squirrelmail_default_language;
 }
 
-if (!sqgetGlobalVar('mailto', $mailto)) {
-    $mailto = '';
+if (!sqgetGlobalVar('mailtodata', $mailtodata)) {
+    $mailtodata = '';
 }
 
 
@@ -159,9 +159,9 @@ if ( sqgetGlobalVar('session_expired_location', $session_expired_location, SQ_SE
     unset($session_expired_location);
 }
 
-if($mailto != '') {
-    $redirect_url  = $location . '/webmail.php?right_frame=compose.php&mailto=';
-    $redirect_url .= urlencode($mailto);
+if($mailtodata != '') {
+    $redirect_url  = $location . '/webmail.php?right_frame=compose.php&mailtodata=';
+    $redirect_url .= urlencode($mailtodata);
 }
 
 
