@@ -18,7 +18,7 @@ Version 1.4.9 - CVS
   - If mailbox name starts with slash or contains ../, error message is 
     generated. Safety check for insecure default UW IMAP setup (#1557078).
   - Ignore message copy errors when messages are deleted. Allows to delete
-    messages when quota is exceeded (#614887) (#646386) (#1446026).
+    messages when quota is exceeded (#614887, #646386, #1446026).
   - Fixed unintended literal fetching (#1562271).
   - Added global file based address book listing controls. Added line 
     length configuration option for local_file address book backend 
@@ -39,7 +39,11 @@ Version 1.4.9 - CVS
     escape character.
   - Added "attachment */*" hook
   - Added third parameter $logout_link to logout_error hook that allows
-    plugin control over login page URI displayed on login error page
+    plugin control over login page URI displayed on login error page.
+  - Security: close cross site scripting vulnerability in draft, compose
+    and mailto functionality [CVE-2006-6142].
+  - Security: work around an issue in Internet Explorer that would guess
+    the mime type of a file based on contents, not Content-Type header.
 
 Version 1.4.8 - 11th August 2006
 --------------------------------
